# myHealth

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: modules.doctree  myHealth.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/: myHealth.rst.txt
docs/_build/html/source/: modules.html  myHealth.html
docs/source/: modules.rst
src/myHealth/: __init__.py  medication.py  myHealth.py  myMedication.csv  myVitals.csv  utility.py  visualisation.py  vitals.py
tests/: test_medication.py
