[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myHealth"
description = "A Python app that helps patients generate simple personal medical history reports for doctor's appointments."
version = "1.0"
requires-python = ">=3.12"

readme = "README.md"
license = {file = "LICENSE"}

authors = [
  {name = "Sze Yoong Low"},
]
maintainers = [
  {name = "Sze Yoong Low"},
]

dependencies = [
  "tabulate >= 0.9.0",
  "matplotlib >= 3.9.0"
  "pandas >= 2.2.2"
  "numpy >= 1.26.4"
  "pytest >= 8.2.1"
]

keywords = ["cs50", "healthcare", "matplotlib", "numpy", "pandas", "pytest", "object-oriented prgramming",
            "unit test", "command line", "recursion", "algorithm", "data", "data science", "data analytics", "statistics"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Healthcare Industry",
  "Natural Language :: English",
  "Topic :: Database",
]

[project.urls]
Source = "src/myHealth/myHealth.py"
Documentation = ""
Repository = "https://github.com/sy8low/myHealth"
Changelog = "CHANGELOG.md"
PyPI = "https://pypi.org/project/myHealth/"
Youtube = "https://www.youtube.com/watch?v=v23E7wb9Ykc"